5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1595_2895.log
== TEST (2019-03-30 19:33:56) 
-- CODE:
var1 = input("Quantidade de jogos: ")
qtde = float(var1)

var2 = input("Valor do Jogo: ")
jogo = float(var2)

var3 = input("Valor do Frete: ")
frete = float(var3)

total = (qtde*jogo) + frete

print("Quantidade de Jogos", qtde)
print("Valor dos Jogos"m jogo)
print("Valor do Frete: ", frete)
print ("Total a pagar: ", total)

-- ERROR:
File "XXXX", line 13
    print("Valor dos Jogos"m jogo)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:34:12) 
-- CODE:
var1 = input("Quantidade de jogos: ")
qtde = float(var1)

var2 = input("Valor do Jogo: ")
jogo = float(var2)

var3 = input("Valor do Frete: ")
frete = float(var3)

total = (qtde*jogo) + frete

print("Quantidade de Jogos", qtde)
print("Valor dos Jogos", jogo)
print("Valor do Frete: ", frete)
print ("Total a pagar: ", total)

-- OUTPUT:
Quantidade de Jogos 12.0
Valor dos Jogos 45.0
Valor do Frete:  78.0
Total a pagar:  618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:34:32) 
-- CODE:
var1 = input("Quantidade de jogos: ")
qtde = float(var1)

var2 = input("Valor do Jogo: ")
jogo = float(var2)

var3 = input("Valor do Frete: ")
frete = float(var3)

total = (qtde*jogo) + frete

print("Quantidade de Jogos", qtde)
print("Valor dos Jogos", jogo)
print("Valor do Frete: ", frete)
print ("Total a pagar: ", total)

-- EXECUTION TIME:
0.137841
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Quantidade de Jogos 12.0
Valor dos Jogos 45.0
Valor do Frete:  78.0
Total a pagar:  618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Quantidade de Jogos 10.0
Valor dos Jogos 67.0
Valor do Frete:  95.0
Total a pagar:  765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Quantidade de Jogos 246.0
Valor dos Jogos 975.0
Valor do Frete:  321.0
Total a pagar:  240171.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:36:29) 
-- CODE:
var1 = input("Quantidade de jogos: ")
qtde = int(var1)

var2 = input("Valor do Jogo: ")
jogo = float(var2)

var3 = input("Valor do Frete: ")
frete = float(var3)

total = (qtde*jogo) + frete

print("Quantidade de Jogos", qtde)
print("Valor dos Jogos", jogo)
print("Valor do Frete: ", frete)
print ("Total a pagar: ", total)

-- OUTPUT:
Quantidade de Jogos 12
Valor dos Jogos 45.0
Valor do Frete:  78.0
Total a pagar:  618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:36:45) 
-- CODE:
var1 = input("Quantidade de jogos: ")
qtde = int(var1)

var2 = input("Valor do Jogo: ")
jogo = float(var2)

var3 = input("Valor do Frete: ")
frete = float(var3)

total = (qtde*jogo) + frete

print("Quantidade de Jogos", qtde)
print("Valor dos Jogos", jogo)
print("Valor do Frete: ", frete)
print ("Total a pagar: ", total)

-- OUTPUT:
Quantidade de Jogos 12
Valor dos Jogos 45.0
Valor do Frete:  78.0
Total a pagar:  618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:36:58) 
-- CODE:
var1 = input("Quantidade de jogos: ")
qtde = int(var1)

var2 = input("Valor do Jogo: ")
jogo = float(var2)

var3 = input("Valor do Frete: ")
frete = float(var3)

total = (qtde*jogo) + frete

print("Quantidade de Jogos", qtde)
print("Valor dos Jogos", jogo)
print("Valor do Frete: ", frete)
print ("Total a pagar: ", total)

-- EXECUTION TIME:
0.238525
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Quantidade de Jogos 12
Valor dos Jogos 45.0
Valor do Frete:  78.0
Total a pagar:  618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Quantidade de Jogos 10
Valor dos Jogos 67.0
Valor do Frete:  95.0
Total a pagar:  765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Quantidade de Jogos 246
Valor dos Jogos 975.0
Valor do Frete:  321.0
Total a pagar:  240171.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:37:28) 
-- CODE:
var1 = input("Quantidade de jogos: ")
qtde = int(var1)

var2 = input("Valor do Jogo: ")
jogo = float(var2)

var3 = input("Valor do Frete: ")
frete = float(var3)

total = (qtde*jogo) + frete

print (total)

-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:37:45) 
-- CODE:
var1 = input("Quantidade de jogos: ")
qtde = int(var1)

var2 = input("Valor do Jogo: ")
jogo = float(var2)

var3 = input("Valor do Frete: ")
frete = float(var3)

total = (qtde*jogo) + frete

print (total)

-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:38:02) 
-- CODE:
var1 = input("Quantidade de jogos: ")
qtde = int(var1)

var2 = input("Valor do Jogo: ")
jogo = float(var2)

var3 = input("Valor do Frete: ")
frete = float(var3)

total = (qtde*jogo) + frete

print (total)

-- EXECUTION TIME:
0.219321
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
